<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/lnKhungDangNhap"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/size30sp"
        android:layout_marginTop="@dimen/size30sp"
        android:layout_marginEnd="@dimen/size30sp"
        android:layout_marginBottom="@dimen/size30sp"
        android:padding="@dimen/size10dp"
        android:text="@string/dangnhap"
        android:textColor="@color/white"
        android:textSize="@dimen/size30sp"
        android:textStyle="bold">

    </TextView>

    <LinearLayout
        android:id="@+id/lnKhungDangNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/size10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10dp"
            android:background="@color/white"
            android:baselineAligned="false"
            android:drawableLeft="@drawable/baseline_person_24"
            android:drawablePadding="@dimen/size10dp"
            android:hint="@string/email"
            android:padding="@dimen/size10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black">

        </EditText>


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/size10dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/baseline_https_24"
            android:drawablePadding="@dimen/size10dp"
            android:hint="@string/password"
            android:padding="@dimen/size10dp"
            android:password="true"
            android:textColor="@color/black"
            android:textColorHint="@color/black">

        </EditText>

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dangnhap" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="@dimen/size10dp">

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/size10dp"
                android:text="@string/dangky"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/forgotpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/size10dp"
                android:text="@string/forgotpass"
                android:textColor="@color/white"
                android:gravity="end" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/size10dp"
            >
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/fb"
                android:layout_margin="@dimen/size10dp"
                 />

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/google"
                android:layout_margin="@dimen/size10dp"

                />

        </LinearLayout>
    </LinearLayout>





</RelativeLayout>
