<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@drawable/background">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size250dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/size180dp"
            android:text="@string/dangnhap"
            android:textColor="@color/white"
            android:textSize="@dimen/size30sp"
            />

    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_above="@+id/noAccountTV"
        android:layout_marginEnd="@dimen/size30dp"
        android:layout_marginTop="@dimen/size225dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_email_gray"
                    android:drawablePadding="@dimen/size18dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="@dimen/size18dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordTil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailTil"
                android:layout_marginTop="@dimen/size10dp"
                app:passwordToggleEnabled="true"
                app:hintEnabled="false">

                <EditText
                    android:id="@+id/passwordEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_edittext01"
                    android:drawableStart="@drawable/ic_lock_gray"
                    android:drawablePadding="@dimen/size18dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="@dimen/size18dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgotTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/passwordTil"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/size10dp"
                android:padding="@dimen/size10dp"
                android:text="@string/forgotpass"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/forgotTv"
                android:layout_marginTop="@dimen/size20dp"
                android:background="@drawable/shape_button01"
                android:text="@string/dangnhap"
                android:textColor="@color/white"/>


        </RelativeLayout>
    </ScrollView>
    <TextView
        android:id="@+id/noAccountTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/size20dp"
        android:text="@string/TKM"
        android:textColor="@color/white"
        />
</RelativeLayout>
